# wave-particle-duality-experiment-data

./: .gitignore  LICENSE  README.md  analysis.ipynb  analyze_black_body_radiation.py  analyze_dispersion.py  diffraction_grating_simulation.py  dispersion_analysis.ipynb  dispersion_data.xlsx  equations.md  pyproject.toml  results.csv  results.txt
ODR/: LICENSE
common/: README.md  odr_fit.py
data/: black_body_radiation_spectrum.xlsx  dispersion.xlsx  ~$black_body_radiation_spectrum.xlsx
experiment/: README.md  analyze_black_body_radiation.py  analyze_dispersion.py  equations_black_body_radiation.md  equations_dispersion.md
experiment/data/: black_body_radiation_spectrum.cap
old/: dispersion_analysis.ipynb
simulation/: README.md  __init__.py  run.py  run2.py  run_simulation.py  run_wave_packet.py
simulation/core/: __init__.py  config.py  physics.py  simulator.py
simulation/core/physics/: __init__.py  base.py  continuous.py  gaussian_packet.py  infinite.py
simulation/docs/: diffraction_equations.md  eqs2.md  part2.md
simulation/ui/: __init__.py  continuous_interactive.py  interactive.py
simulation/visualization/: __init__.py  comparison.py  plotter.py  spectrum.py  wall_pattern.py  wave_packet_plotter.py
utils/: odr_fit.py
